--- a/src/cities/templates/cities/details.html
+++ b/src/cities/templates/cities/details.html
@@ -10,7 +10,7 @@
         </div>
     </div>
     <div class="col-md-4">
-        <a href="{% url 'cities:home' %}">Back to cities list</a>
+        <a href="{% url 'cities:home' %}" style="text-decoration:none;">Back to cities list</a>
     </div>
 </div>
 {% endblock %}
