--- a/src/cities/templates/cities/home.html
+++ b/src/cities/templates/cities/home.html
@@ -6,7 +6,8 @@
 <div class="row">
     <div class="col-md">
         {% for object in objects_list %}
-        <p><a href="{% url 'cities:details' pk=object.pk%}">{{object.name}}({{object.country}})</a></p>
+        <p><a href="{% url 'cities:details' pk=object.pk%}" style="text-decoration:none;">{{object.name}}({{object.country}})</a>
+        </p>
         {% endfor %}
     </div>
 </div>
