--- a/src/cities/templates/cities/create.html
+++ b/src/cities/templates/cities/create.html
@@ -3,6 +3,22 @@
 
 {% block content %}
 <h1>City input</h1>
+<div class="row">
+    <div class="col-md-4">
+        <form action="{{action}}" method="post"> {% csrf_token %}
+            {% for field in form %}
+            <div class="fieldWrapper">
+                <p>{{ field.label_tag }} {{ field }}</p>
+                {% if field.help_text %}
+                <p class="help">{{ field.help_text|safe }}</p>
+                {% endif %}
+            </div>
+            {% endfor %}
 
-{% include 'form.html' with button_text='Save' button_color='dark' %}
+            <button type="submit" class="btn btn-dark">Save</button>
+        </form>
+    </div>
+</div>
+
+
 {% endblock %}
