--- a/src/cities/templates/cities/home.html
+++ b/src/cities/templates/cities/home.html
@@ -4,11 +4,49 @@
 {% block content %}
 <h1>Cities</h1>
 <div class="row">
-    <div class="col-md">
-        {% for object in objects_list %}
-        <p><a href="{% url 'cities:details' pk=object.pk%}" style="text-decoration:none;">{{object.name}}({{object.country}})</a>
-        </p>
-        {% endfor %}
+    <div class="col-md-4 my-2">
+        <table class="table table-striped">
+            {% for object in page_obj %}
+            <tr>
+                <td><a href="{% url 'cities:details' pk=object.pk%}" style="text-decoration:none;">{{object.name}}({{object.country}})</a>
+                </td>
+                <td><a href="{% url 'cities:update' pk=object.pk%}" style="text-decoration:none;">
+                    <button type="submit" class="btn btn-dark">Edit</button>
+                </a></td>
+                <td><a href="{% url 'cities:delete' pk=object.pk%}" style="text-decoration:none;">
+                    <button type="submit" class="btn btn-danger">Delete</button>
+                </a></td>
+            </tr>
+            {% endfor %}
+        </table>
+        <nav aria-label="...">
+            <ul class="pagination">
+                {% if page_obj.has_previous %}
+                <li class="page-item">
+                    <a class="page-link" href="?page={{ page_obj.previous_page_number }}">Previous</a>
+                </li>
+                {% else %}
+                <li class="page-item disabled">
+                    <span class="page-link">Previous</span>
+                </li>
+                {% endif %}
+                {% for page in page_obj.paginator.page_range %}
+                <li class="page-item {% ifequal page page_obj.number %} active {% endifequal %}" aria-current="page">
+                    <a class="page-link" href="?page={{page}}">{{page}}</a>
+                </li>
+                {% endfor %}
+                {% if page_obj.has_next %}
+                <li class="page-item">
+                    <a class="page-link" href="?page={{ page_obj.next_page_number }}">Next</a>
+                </li>
+                {% else %}
+                <li class="page-item disabled">
+                    <span class="page-link">Next</span>
+                </li>
+                {% endif %}
+            </ul>
+        </nav>
+        <a href="{% url 'cities:create'%}" class="btn btn-dark"> Add another city </a>
     </div>
 </div>
 {% endblock %}
