--- a/src/trains/templates/trains/update.html
+++ b/src/trains/templates/trains/update.html
@@ -2,7 +2,7 @@
 {% block title %} Train editing {% endblock %}
 
 {% block content %}
-<h1>Train city</h1>
+<h1>Edit train</h1>
 
 {% include 'form.html' with button_text='Edit' button_color='dark' %}
 {% endblock %}
